# yadro-cpp-computer-club

./: CMakeLists.txt  README.md  Исходное задание.txt
include/: Club.h  ClubTime.h  Event.h  Table.h
src/: Club.cpp  ClubTime.cpp  Event.cpp  Table.cpp  main.cpp
tests/: ClubTest.cpp  EventTest.cpp  TableTest.cpp  TimeTest.cpp
